--- a/_posts/2025-11-23-pairwise.markdown
+++ b/_posts/2025-11-23-pairwise.markdown
@@ -5,6 +5,6 @@ date:   2025-11-23 00:00:00 +00:00
 image: /images/tetrasdf.jpg
 categories: research
 authors: "<strong>Seonghun Oh</strong>, Youngjung Uh, Jin-Hwa Kim"
-venue: "Preprint, under review"
+venue: "Preprint"
 paper: https://arxiv.org/abs/2511.16273
 ---
